
syntax = "proto3";

package app;

service AuthService {
  rpc UserAuth (Credentials) returns (JWT) {};
  rpc CreateUser (Credentials) returns (JWT) {};
  rpc IsAuthUser (JWT) returns (Success) {};
};

service DataBaseProvider {
  rpc CreateUser (Credentials) returns (SuccessMessage);
  rpc FindById (Credentials) returns (SuccessMessage) {};
  rpc FindByEmail (Credentials) returns (SuccessMessage) {};
};
message JWT {
  string JWT = 1;
};
message Credentials {
  string email = 1;
  string password = 2;
};
message Success {
  bool success = 1;
};
message SuccessMessage {
  string email = 1;
  string password = 2;
  int32 id = 3;
};